Added mj-hero element to header document

--- a/index.html
+++ b/index.html
@@ -135,19 +135,11 @@
       border: 0;
     }
 
-    .hero>table>tbody>tr>td {
-      background-image: url('https://i.ibb.co/Bs1GwqP/on-hero.gif') !important;
-      background-size: cover !important;
-      background-position: center !important;
-      background-repeat: no-repeat !important;
-      height: 675px !important;
-      cursor: pointer !important;
-    }
-
     /* ======> Mobile <====== */
     @media only screen and (max-width: 599.8px) {
       .hero>table>tbody>tr>td {
-        height: 500px !important;
+        background-size: 100% !important;
+        height: 520px !important;
       }
 
       .prod-img>table>tbody>tr>td {
@@ -178,23 +170,27 @@
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;"> No distance is off limits </div>
   <div style="background-color:#f6f6f6;">
     <!-- ======> Header <====== -->
-    <!-- <mj-include path="components/header.mjml" /> -->
-    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="background:#11111A;background-color:#11111A;margin:0px auto;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#11111A;background-color:#11111A;width:100%;">
+    <!-- <mj-section background-color="#11111A">
+  <mj-column  css-class="hero" padding="21px 0">
+    <mj-image href="#" src="https://i.ibb.co/xgxtGVP/on-logo-wht.png" alt="On" width="21px" />
+  </mj-column>
+</mj-section> -->
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0;font-size:0;mso-line-height-rule:exactly;"><v:image style="border:0;height:675px;mso-position-horizontal:center;position:absolute;top:0;width:600px;z-index:-3;" src="https://i.ibb.co/Bs1GwqP/on-hero.gif" xmlns:v="urn:schemas-microsoft-com:vml" /><![endif]-->
+    <div class="hero" style="margin:0 auto;max-width:600px;">
+      <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
         <tbody>
-          <tr>
-            <td style="direction:ltr;font-size:0px;padding:0;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="hero-outlook" style="vertical-align:top;width:600px;" ><![endif]-->
-              <div class="mj-column-per-100 mj-outlook-group-fix hero" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+          <tr style="vertical-align:top;">
+            <td background="https://i.ibb.co/Bs1GwqP/on-hero.gif" style="background:#11111A url('https://i.ibb.co/Bs1GwqP/on-hero.gif') no-repeat center center / cover;background-position:center center;background-repeat:no-repeat;padding:0px;vertical-align:top;" height="675">
+              <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" style="width:600px;" width="600" ><tr><td style=""><![endif]-->
+              <div class="mj-hero-content" style="margin:0px auto;">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;margin:0px;">
                   <tbody>
                     <tr>
-                      <td style="vertical-align:top;padding:21px 0;">
-                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                      <td style="">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;margin:0px;">
                           <tbody>
                             <tr>
-                              <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                              <td align="center" style="font-size:0px;padding:21px 0;word-break:break-word;">
                                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                                   <tbody>
                                     <tr>
@@ -223,13 +219,6 @@
     </div>
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- ======> / Header <====== -->
-    <!-- ======> Hero <====== -->
-    <!-- <mj-section background-color="#11111A">
-      <mj-column>
-        <mj-image href="#" src="https://i.ibb.co/Bs1GwqP/on-hero.gif" alt="Cloud Ultra" />
-      </mj-column>
-    </mj-section> -->
-    <!-- ======> / Hero <====== -->
     <!-- ======> Hero Copy <====== -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#11111A;background-color:#11111A;margin:0px auto;max-width:600px;">
@@ -798,7 +787,6 @@
     <!--[if mso | IE]></td></tr></table><![endif]-->
     <!-- ======> / Horizontal Rule <====== -->
     <!-- ======> Footer <====== -->
-    <!-- <mj-include path="components/footer.mjml" /> -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#11111A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="background:#11111A;background-color:#11111A;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#11111A;background-color:#11111A;width:100%;">
